fixed all chat overflow issues

--- a/client/src/assets/_colors.scss
+++ b/client/src/assets/_colors.scss
@@ -88,7 +88,7 @@ $foreground2: $gray_material_ui;
 @mixin base_font_stack {
   font-family: "Karla", sans-serif;
   font-weight: normal;
-  font-size: 17px;
+  font-size: 14px;
   font-weight: normal;
   color: $highlight1; // must be selected from MAIN REFERENCE
 }
