--- a/client/src/components/message/message.styles.scss
+++ b/client/src/components/message/message.styles.scss
@@ -5,7 +5,7 @@
   color: $highlight1;
   padding: 0.2em 0.5em;
   font-family: "Karla", sans-serif;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .message-container {
@@ -33,6 +33,9 @@
   }
 
   .msg-text {
+    box-sizing: border-box;
+    max-width: 100%;
+    // width: 100%;
     @include chat-bubble;
     overflow-wrap: break-word;
     word-wrap: break-word;
