--- a/client/src/components/navbar/navbar.styles.scss
+++ b/client/src/components/navbar/navbar.styles.scss
@@ -2,6 +2,7 @@
 @import "../../assets/dimensions";
 
 .navbar-container {
+  z-index: 20;
   box-sizing: border-box;
   background-color: $highlight1;
   width: 100%;
